# Runtime-code-Obf

./: .gitignore  CMakeLists.txt  README.md
cmake/: run_dumpbin_scan.cmake  runtime_obfConfig.cmake.in
docs/: binary-verification.md  hardening-review.md  mvp-review.md  review-findings.md
examples/: basic.cpp
include/runtime_obf/: obfuscated_string.hpp
scripts/: check_plaintext.py
tests/: obfuscated_string_tests.cpp
